test upload file

--- a/public/plugins/wechat/view/uploadCourseware/upload.html
+++ b/public/plugins/wechat/view/uploadCourseware/upload.html
@@ -95,13 +95,13 @@
 			removeTimeout:9999999,
 			uploader:"{:cmf_plugin_url('Wechat://UploadCourseware/index')}",
 			onUploadStart:function(){
-				alert('开始上传');
+				//alert('开始上传');
 				},
 			onInit:function(){
-				alert('初始化');
+				//alert('初始化');
 				},
 			onUploadComplete:function(){
-				alert('上传完成');
+				//alert('上传完成');
 				},
 			onDelete:function(file){
 				console.log('删除的文件：'+file);
