--- a/public/plugins/wechat/view/uploadCourseware/upload.html
+++ b/public/plugins/wechat/view/uploadCourseware/upload.html
@@ -9,10 +9,9 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <![endif]-->
-    <!--link href="__ADMIN_TMPL__/public/assets/themes/{:cmf_get_admin_style()}/bootstrap.min.css" rel="stylesheet"-->
+    <link href="__ADMIN_TMPL__/public/assets/themes/{:cmf_get_admin_style()}/bootstrap.min.css" rel="stylesheet">
     <link href="__STATIC__/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="__ADMIN_TMPL__/public/assets/themes/{:cmf_get_admin_style()}/login.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="__STATIC__/js/Huploadify.css"/>
     <script>
         if (window.parent !== window.self) {
             document.write              = '';
@@ -57,7 +56,7 @@
 <script src="__STATIC__/js/wind.js"></script>
 <script src="__STATIC__/js/admin.js"></script>
 <script src="__STATIC__/js/frontend.js"></script>
-
+<link rel="stylesheet" type="text/css" href="__STATIC__/js/uploadify/Huploadify.css"/>
 <script type="text/javascript" src="__STATIC__/js/uploadify/jquery.js"></script>
 <script type="text/javascript" src="__STATIC__/js/uploadify/jquery.Huploadify.js"></script>
 <script>
