--- a/public/plugins/wechat/view/uploadCourseware/upload.html
+++ b/public/plugins/wechat/view/uploadCourseware/upload.html
@@ -84,7 +84,7 @@
 			fileTypeExts:'*.jpg;*.png;*.exe;*.pdf;*.word',
 			multi:true,
 			formData:{key:123456,key2:'vvvv'},
-			fileSizeLimit:9999,
+			fileSizeLimit:9999999,
 			showUploadedPercent:true,//是否实时显示上传的百分比，如20%
 			showUploadedSize:true,
 			removeTimeout:9999999,
