--- a/public/plugins/wechat/view/uploadCourseware/upload.html
+++ b/public/plugins/wechat/view/uploadCourseware/upload.html
@@ -84,10 +84,10 @@
 			fileTypeExts:'*.jpg;*.png;*.exe;*.pdf;*.word',
 			multi:true,
 			formData:{key:123456,key2:'vvvv'},
-			fileSizeLimit:9999999,
+			fileSizeLimit:1024*60,
 			showUploadedPercent:true,//是否实时显示上传的百分比，如20%
 			showUploadedSize:true,
-			removeTimeout:9999999,
+			removeTimeout:1000,
 			uploader:"{:cmf_plugin_url('Wechat://UploadCourseware/index')}",
 			onUploadStart:function(){
 				//alert('开始上传');
@@ -96,7 +96,7 @@
 				//alert('初始化');
 				},
 			onUploadComplete:function(){
-				//alert('上传完成');
+				alert('上传完成');
 				},
 			onDelete:function(file){
 				console.log('删除的文件：'+file);
