test upload file

--- a/public/plugins/wechat/view/uploadCourseware/upload.html
+++ b/public/plugins/wechat/view/uploadCourseware/upload.html
@@ -83,7 +83,7 @@
 			auto:true,
 			fileTypeExts:'*.jpg;*.png;*.exe;*.pdf;*.word',
 			multi:true,
-			formData:{key:123456,key2:'vvvv'},
+			formData:{},
 			fileSizeLimit:1024*60,
 			showUploadedPercent:true,//是否实时显示上传的百分比，如20%
 			showUploadedSize:true,
