test upload file

--- a/public/plugins/wechat/view/uploadCourseware/upload.html
+++ b/public/plugins/wechat/view/uploadCourseware/upload.html
@@ -81,7 +81,7 @@
     $(function(){
 		$('#upload').Huploadify({
 			auto:true,
-			fileTypeExts:'*.jpg;*.png;*.exe;*.pdf;*.word',
+			fileTypeExts:'*.jpg;*.png;*.pdf;*.word',
 			multi:true,
 			formData:{},
 			fileSizeLimit:1024*60,
