--- a/public/plugins/wechat/view/signIn/index.html
+++ b/public/plugins/wechat/view/signIn/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/example.css"/>
 </head>
 <body>
-    <div class="weui-cells__title">表单</div>
+    <div class="weui-cells__title">绑定学号或换绑学号</div>
     <div class="weui-cells weui-cells_form">
         <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label">qq</label></div>
+            <div class="weui-cell__hd"><label class="weui-label">学号</label></div>
             <div class="weui-cell__bd">
-                <input class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入qq号"/>
+                <input class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入学号"/>
             </div>
         </div>
     </div>
