--- a/public/plugins/wechat/view/signIn/index.html
+++ b/public/plugins/wechat/view/signIn/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,viewport-fit=cover">
     <title>WeUI</title>
-    <link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/weui.css"/>
-    <link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/example.css"/>
+    <link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/weui.min.css"/>
+    <!--link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/example.css"/-->
 </head>
 <body>
     <div class="weui-cells__title">绑定学号或换绑学号</div>
@@ -32,10 +32,12 @@
     <div class="weui-footer">
         <p class="weui-footer__text">Copyright &copy; 2017-2018 zsb</p>
     </div>
-    <script src="__PLUGIN_TMPL__/signIn/public/js/zepto.min.js"></script>
-    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script src="https://res.wx.qq.com/open/libs/weuijs/1.0.0/weui.min.js"></script>
-    <script src="__PLUGIN_TMPL__/signIn/public/js/example.js"></script>
+    <!--script src="__PLUGIN_TMPL__/signIn/public/js/zepto.min.js"></script-->
+    <!--script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script-->
+    <!--script src="https://res.wx.qq.com/open/libs/weuijs/1.0.0/weui.min.js"></script-->
+    <!--script src="__PLUGIN_TMPL__/signIn/public/js/example.js"></script-->
+    <script src="__PLUGIN_TMPL__/signIn/public/js/weui.min.js"></script>
+
 </body>
 </html>
 
