--- a/public/plugins/wechat/view/signIn/index.html
+++ b/public/plugins/wechat/view/signIn/index.html
@@ -8,10 +8,19 @@
     <!--link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/example.css"/-->
 </head>
 <body>
-    <div class="weui-cells__title">绑定学号或换绑学号</div>
+  <div class="page">
+    <div class="weui-cells__title">
+       {switch name="Request.get.act"}
+        {case value="add"}请正确填写绑定学号{/case}
+        {case value="modify"}请谨慎操作：换绑学号一旦确定，之前此账号对应的签到记录将作废！{/case}
+        {default /}未知操作！
+       {/switch}
+    </div>
     <div class="weui-cells weui-cells_form">
         <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label">学号</label></div>
+            <div class="weui-cell__hd">
+               <label class="weui-label">学号</label>
+            </div>
             <div class="weui-cell__bd">
                 <input class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入学号"/>
             </div>
@@ -32,6 +41,7 @@
     <div class="weui-footer">
         <p class="weui-footer__text">Copyright &copy; 2017-2018 zsb</p>
     </div>
+  </div> 
     <!--script src="__PLUGIN_TMPL__/signIn/public/js/zepto.min.js"></script-->
     <!--script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script-->
     <!--script src="https://res.wx.qq.com/open/libs/weuijs/1.0.0/weui.min.js"></script-->
