测试绑定学号

--- a/public/plugins/wechat/view/signIn/index.html
+++ b/public/plugins/wechat/view/signIn/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <div class="weui-cells__title">
-       {switch name="Request.get.act"}
+       {switch name="act"}
         {case value="add"}请正确填写绑定学号{/case}
         {case value="modify"}请谨慎操作：换绑学号一旦确定，之前此账号对应的签到记录将作废！{/case}
         {default /}未知操作！
