--- a/public/plugins/wechat/view/signIn/index.html
+++ b/public/plugins/wechat/view/signIn/index.html
@@ -10,11 +10,14 @@
 <body>
   <div class="page">
     <div class="weui-cells__title">
-       {switch name="act"}
-        {case value="add"}请正确填写绑定学号{/case}
-        {case value="modify"}请谨慎操作：换绑学号一旦确定，之前此账号对应的签到记录将作废！{/case}
-        {default /}未知操作！
-       {/switch}
+       <?php if({$Request.get.act}=='add'){ 
+                 echo '请正确填写绑定学号'; 
+             }elseif({$Request.get.act}=='modify'){
+                 echo '请谨慎操作：换绑学号一旦确定，之前此账号对应的签到记录将作废！';
+             }else{
+                echo '未知操作！';
+             }
+       ?>
     </div>
     <div class="weui-cells weui-cells_form">
         <div class="weui-cell">
