--- a/public/plugins/wechat/view/signIn/index.html
+++ b/public/plugins/wechat/view/signIn/index.html
@@ -11,9 +11,9 @@
   <div class="page">
     <div class="weui-cells__title">
        <php> 
-             if(Think.get.act == 'add'){ 
+             if($act == 'add'){ 
                  echo '请正确填写绑定学号'; 
-             }elseif(Think.get.act == 'modify'){
+             }elseif($act == 'modify'){
                  echo '请谨慎操作：换绑学号一旦确定，之前此账号对应的签到记录将作废！';
              }else{
                 echo '未知操作！';
