--- a/public/plugins/wechat/view/signIn/index.html
+++ b/public/plugins/wechat/view/signIn/index.html
@@ -8,6 +8,7 @@
     <!--link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/example.css"/-->
 </head>
 <body>
+<form id='form' action="{cmf_plugin_url('wechat://SignIn/index')}" method="post">
   <div class="page">
     <div class="weui-cells__title">
     <php>
@@ -15,7 +16,7 @@
             echo '请正确填写绑定学号';
     </php>
     </div>
-    <div class="weui-cells weui-cells_form" action="{cmf_plugin_url('wechat://SignIn/index')}">
+    <div class="weui-cells weui-cells_form">
         <div class="weui-cell">
             <div class="weui-cell__hd">
                <label class="weui-label">学号</label>
@@ -49,8 +50,9 @@
         }
     </php>
     <div class="weui-btn-area">  
-       <a href="javascript:;" class="weui-btn weui-btn_primary">提交</a>
+       <a href="document.getElementById('form').submit()" class="weui-btn weui-btn_primary">提交</a>
     </div>
+  </form>
     <div class="weui-footer">
         <p class="weui-footer__text">Copyright &copy; 2017-2018 zsb</p>
     </div>
