--- a/public/plugins/wechat/view/signIn/index.html
+++ b/public/plugins/wechat/view/signIn/index.html
@@ -8,7 +8,7 @@
     <!--link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/example.css"/-->
 </head>
 <body>
-<form action="{cmf_plugin_url('wechat://SignIn/index')}" method="post">
+<form action="{:cmf_plugin_url('Wechat://SignIn/index')}" method="post">
   <div class="page">
     <div class="weui-cells__title">
     <php>
@@ -22,7 +22,7 @@
                <label class="weui-label">学号</label>
             </div>
             <div class="weui-cell__bd">
-                <input class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入学号"/>
+                <input name="studentId" class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入学号"/>
             </div>
         </div>
     </div>
@@ -37,7 +37,7 @@
                <label class="weui-label">学号</label>
             </div>
             <div class="weui-cell__bd">
-                <input class="weui-input" type="number" pattern="[0-9]*" placeholder="(不填或留空则不修改！)"/>
+                <input name="studentId" class="weui-input" type="number" pattern="[0-9]*" placeholder="(不填或留空则不修改！)"/>
             </div>
         </div>
     </div>
