--- a/public/plugins/wechat/view/signIn/index.html
+++ b/public/plugins/wechat/view/signIn/index.html
@@ -22,7 +22,7 @@
                <label class="weui-label">学号</label>
             </div>
             <div class="weui-cell__bd">
-                <input name="studentId" class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入学号"/>
+                <input name="saveStudentId" class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入学号"/>
             </div>
         </div>
     </div>
@@ -37,7 +37,7 @@
                <label class="weui-label">学号</label>
             </div>
             <div class="weui-cell__bd">
-                <input name="studentId" class="weui-input" type="number" pattern="[0-9]*" placeholder="(不填或留空则不修改！)"/>
+                <input name="modifyStudentId" class="weui-input" type="number" pattern="[0-9]*" placeholder="(不填或留空则不修改！)"/>
             </div>
         </div>
     </div>
