--- a/public/plugins/wechat/view/signIn/signin_record.html
+++ b/public/plugins/wechat/view/signIn/signin_record.html
@@ -8,7 +8,7 @@
     <!--link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/example.css"/-->
 </head>
 <body>
-    <table cols='4' border='1'>
+    <table border='1' cellpadding='10'>
         <tr>
             <th>id</th>
             <th>学号</th>
