--- a/public/plugins/wechat/view/uploadCourseware/viewOrDownload.html
+++ b/public/plugins/wechat/view/uploadCourseware/viewOrDownload.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="weui-cell__ft">说明文字</div>
             </div>
-            {volist name="courseware" id="data"}
+            <volist name="courseware" id="data">
             <div class="weui-cell weui-cell_swiped">
                 <div class="weui-cell__bd" style="transform: translateX(-68px)">
                     <div class="weui-cell">
@@ -37,7 +37,7 @@
                     <a class="weui-swiped-btn weui-swiped-btn_warn" href="javascript:">删除</a>
                 </div>
             </div>
-            {/volist}
+            </volist>
         </div>
 
         <div class="weui-cells__title">带图标、说明的列表项</div>
