测试查看签到记录表内容

--- a/public/plugins/wechat/view/signIn/signin_record.html
+++ b/public/plugins/wechat/view/signIn/signin_record.html
@@ -19,8 +19,8 @@
         <tr>
             <td>{$data.id}</td>
             <td>{$data.studentId}</td>
-            <td></td>
-            <td>{:date('Y-m-d',$data.signInTime)}</td>
+            <td>{$data.nickname}</td>
+            <td>{:date('Y-m-d H:i:s',$data.signInTime)}</td>
         </tr> 
         </volist>
     </table>
