--- a/public/plugins/wechat/view/signIn/signin_record.html
+++ b/public/plugins/wechat/view/signIn/signin_record.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/weui.min.css"/>
     <!--link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/example.css"/-->
 </head>
+<style type="text/css">  
+    table{ border-collapse:collapse; border:solid 2px Black; }  
+    table td{ border:solid 1px Black; padding:10px; }  
+</style>  
 <body>
-    <table border='1' cellpadding='30' align = 'center'>
+    <table border='1' cellpadding='10' style="float:center">
         <tr>
             <th>id</th>
             <th>学号</th>
