--- a/public/plugins/wechat/view/signIn/signin_record.html
+++ b/public/plugins/wechat/view/signIn/signin_record.html
@@ -8,11 +8,11 @@
     <!--link rel="stylesheet" href="__PLUGIN_TMPL__/signIn/public/css/example.css"/-->
 </head>
 <style type="text/css">  
-    table{ border-collapse:collapse; border:solid 2px Black; }  
+    table{ border-collapse:collapse; border:solid 2px Black; float:center;}  
     table td{ border:solid 1px Black; padding:10px; }  
 </style>  
 <body>
-    <table border='1' cellpadding='10' style="float:center">
+    <table border='1'>
         <tr>
             <th>id</th>
             <th>学号</th>
