测试表格居中样式

--- a/public/plugins/wechat/view/signIn/signin_record.html
+++ b/public/plugins/wechat/view/signIn/signin_record.html
@@ -12,7 +12,8 @@
     table td{ border:solid 1px Black; padding:10px; }  
 </style>  
 <body>
-    <table border='1'>
+<div style="text-align:center">
+    <table border='1' style="width: 60%;margin:auto">
         <tr>
             <th>id</th>
             <th>学号</th>
@@ -30,7 +31,7 @@
         </tr> 
         </volist>
     </table>
-
+</div>
     <script src="__PLUGIN_TMPL__/signIn/public/js/weui.min.js"></script>
 </body>
 </html>
