--- a/public/plugins/wechat/view/signIn/signin_record.html
+++ b/public/plugins/wechat/view/signIn/signin_record.html
@@ -13,7 +13,7 @@
 </style>  
 <body>
 <div style="text-align:center">
-    <table border='1' style="width: 60%;margin:auto">
+    <table border='1' style="margin:auto">
         <tr>
             <th>id</th>
             <th>学号</th>
