测试课件模块

--- a/public/plugins/wechat/view/uploadCourseware/viewOrDownload.html
+++ b/public/plugins/wechat/view/uploadCourseware/viewOrDownload.html
@@ -28,7 +28,7 @@
                 <div class="weui-cell__bd" style="transform: translateX(-68px)">
                     <div class="weui-cell">
                         <div class="weui-cell__bd">
-                            <p><a href="{:cmf_plugin_url('Wechat://UploadCourseware/download',['filename'=>$data.name])}">标题文字</p>
+                            <p><a href="{:cmf_plugin_url('Wechat://UploadCourseware/download',['filename'=>$data.name])}">标题文字</a></p>
                         </div>
                         <div class="weui-cell__ft">说明文字</div>
                     </div>
