测试课件模块

--- a/public/plugins/wechat/view/uploadCourseware/upload.html
+++ b/public/plugins/wechat/view/uploadCourseware/upload.html
@@ -87,7 +87,7 @@
 				//alert('初始化');
 				},
 			onUploadComplete:function(){
-				alert('上传完成');
+				//alert('上传完成');
 				},
 			onDelete:function(file){
 				console.log('删除的文件：'+file);
