--- a/public/plugins/wechat/view/uploadCourseware/upload.html
+++ b/public/plugins/wechat/view/uploadCourseware/upload.html
@@ -18,13 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <h1 class="text-center">ThinkCMF</h1>
-				<table col='2' row='4'>
-				   <tr>
-				      <th>栏目</th><th>值</th>
-					  <td><a href="{:cmf_plugin_url('Wechat://UploadCourseware/download',array('filename'=>''))}">resume</a></td>
-				   </tr>
-				</table>
+                <h1 class="text-center">课件上传</h1>
                 <input id="file-1" type="hidden" name="file_url" >
 				<input  id="file-1-name" type="text" name="file_name" title="图片名称">
 				<a id="file-1-preview" target="_blank">下载</a>
