测试课件模块

--- a/public/plugins/wechat/view/uploadCourseware/upload.html
+++ b/public/plugins/wechat/view/uploadCourseware/upload.html
@@ -20,7 +20,7 @@
             <div class="col-md-4 col-md-offset-4">
                 <h1 class="text-center">课件上传</h1>
              </div>
-             <div id="upload"></div>
+             <div id="upload" style="align:center"></div>
         </div>
 
     </div>
@@ -54,9 +54,6 @@
 //$jssdk = new JSSDK("wx01002da5942d4384", "64c926bb226cd1195303e9eba7d8a405");
 //$signPackage = $jssdk->GetSignPackage();
 ?>
-
-<input type="button" onclick="chooseImage()" value="请选择图片"/>
-<img src="" id="uploadImage" style="width:50px;height:50px;"/><br/><br/>
 
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script>
