测试课件模块

--- a/public/plugins/wechat/view/uploadCourseware/viewOrDownload.html
+++ b/public/plugins/wechat/view/uploadCourseware/viewOrDownload.html
@@ -18,11 +18,12 @@
             <th>名字</th>
             <th>阅读量</th>
             <th>下载量</th>
+            <th>上传者头像</th>
             <th>上传者昵称</th>
             <th>上传者学号</th>
             <th>操作</th>
         </tr>
-        <volist name="signin_record" id="data">
+        <volist name="courseware" id="data">
         <tr>
             <td>{$data.id}</td>
             <td>{$data.name}</td>
