--- a/public/plugins/wechat/view/signIn/index.html
+++ b/public/plugins/wechat/view/signIn/index.html
@@ -37,7 +37,7 @@
                <label class="weui-label">学号</label>
             </div>
             <div class="weui-cell__bd">
-                <input name="modifyStudentId" class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入学号！)"/>
+                <input name="modifyStudentId" class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入学号！"/>
             </div>
         </div>
     </div>
