--- a/public/plugins/wechat/view/uploadCourseware/viewOrDownload.html
+++ b/public/plugins/wechat/view/uploadCourseware/viewOrDownload.html
@@ -26,7 +26,7 @@
         <volist name="courseware" id="data">
         <tr>
             <td>{$data.id}</td>
-            <td>{$data.name}</td>
+            <td><php>if($isPic!=0){echo '<img src="$data.name" style="width:65px;height:65px;"/>'}else{echo $data.name;}</php></td>
             <td>{$data.views}</td>
             <td>{$data.downloads}</td>
             <td><img src="{$data.headimgurl}" style="width:40px;height:40px;"/></td>
