修改授权登录存储access_token和显示上传的课件等细节

--- a/public/plugins/wechat/view/uploadCourseware/viewOrDownload.html
+++ b/public/plugins/wechat/view/uploadCourseware/viewOrDownload.html
@@ -32,7 +32,7 @@
             <td><img src="{$data.headimgurl}" style="width:40px;height:40px;"/></td>
             <td>{$data.nickname}</td>
             <td>{$data.studentId}</td>
-            <td><a href="{:cmf_plugin_url('Wechat://UploadCourseware/download',['filename'=>'/webdata/'.$data.name])}">[下载]</a></td>
+            <td><a href="{:cmf_plugin_url('Wechat://UploadCourseware/download',['filename'=>$data.name])}">[下载]</a></td>
         </tr> 
         </volist>
     </table>
