--- a/public/plugins/wechat/view/uploadCourseware/upload.html
+++ b/public/plugins/wechat/view/uploadCourseware/upload.html
@@ -60,7 +60,7 @@
     $(function(){
 		$('#upload').Huploadify({
 			auto:true,
-			fileTypeExts:'*.jpg;*.jpeg,*.png;*.pdf;*.word',
+			fileTypeExts:'*.jpg;*.jpeg,*.png;*.pdf;*.word,*.doc',
 			multi:true,
 			formData:{},
 			fileSizeLimit:1024*60,
